--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.1",
     "@prisma/client": "^4.9.0",
     "@react-google-maps/api": "^2.17.1",
@@ -23,6 +24,7 @@
     "eslint-config-next": "^0.2.4",
     "framer-motion": "^8.5.0",
     "next": "13.1.1",
+    "next-auth": "^4.18.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.5",
