--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "framer-motion": "^8.5.0",
+    "gray-matter": "^4.0.3",
+    "marked": "^4.3.0",
     "next": "13.1.1",
     "next-auth": "^4.18.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-markdown": "^8.0.5",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/marked": "^4.0.8",
     "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.13",
     "eslint-config-next": "^13.1.5",
