refactor and format

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "cSpell.words": [
-        "financials",
-        "Nexient",
-        "sagetech"
-    ]
+  "cSpell.words": ["financials", "Nexient", "sagetech"]
 }
