--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
@@ -39,6 +40,7 @@
     "autoprefixer": "^10.4.13",
     "eslint-config-next": "^13.1.5",
     "postcss": "^8.4.20",
+    "prettier": "^2.8.7",
     "prisma": "^4.9.0",
     "tailwindcss": "^3.2.4"
   }
