--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,15 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "no-unused-vars": "error",
+    "semi": ["error", "always"],
+    "indent": ["error", 2],
+    "quotes": ["error", "double"],
+    "no-console": "error"
+  }
 }
