--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/marked": "^4.0.8",
     "@types/react-slick": "^0.23.10",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
     "autoprefixer": "^10.4.13",
     "eslint-config-next": "^13.1.5",
     "postcss": "^8.4.20",
