--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-slick": "^0.29.0",
+    "react-tabs": "^6.0.1",
     "slick-carousel": "^1.8.1",
     "typescript": "4.9.4"
   },
