--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "react-slick": "^0.29.0",
     "react-tabs": "^6.0.1",
     "slick-carousel": "^1.8.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "aws-amplify": "^5.3.10",
+    "nookies": "^2.5.2",
+    "postcss": "8.4.29"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
