--- a/package.json
+++ b/package.json
@@ -18,25 +18,28 @@
     "@next/font": "13.1.1",
     "@prisma/client": "^4.9.0",
     "@react-google-maps/api": "^2.17.1",
+    "@supabase/supabase-js": "^2.43.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@vercel/analytics": "^1.0.1",
+    "aws-amplify": "^5.3.10",
+    "axios": "^1.6.8",
     "eslint": "8.31.0",
     "framer-motion": "^8.5.0",
     "gray-matter": "^4.0.3",
     "marked": "^4.3.0",
     "next": "13.1.1",
     "next-auth": "^4.18.10",
+    "nookies": "^2.5.2",
+    "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-slick": "^0.29.0",
     "react-tabs": "^6.0.1",
     "slick-carousel": "^1.8.1",
-    "typescript": "4.9.4",
-    "aws-amplify": "^5.3.10",
-    "nookies": "^2.5.2",
-    "postcss": "8.4.29"
+    "swr": "^2.2.5",
+    "typescript": "4.9.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
