fix build issue

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,5 +4,5 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended"
   ],
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint"]
 }
